[gd_scene load_steps=3 format=3 uid="uid://ba6euiiltsejy"]

[ext_resource type="Script" uid="uid://cx6pvyvl28qiv" path="res://Mechanics/ice_rectangle.gd" id="1_s5gu2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lfulh"]
size = Vector2(20, 5)

[node name="IceRectangle" type="Node2D"]
script = ExtResource("1_s5gu2")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_lfulh")

[node name="meltTimer" type="Timer" parent="."]

[connection signal="timeout" from="meltTimer" to="." method="_on_melt_timer_timeout"]
